@@ -82,6 +82,8 @@
                 - When a button is disabled, the reason is displayed as tool-tip.
                 - The constraints for properties & relationships are better respected.
             - In the list-views for Product/Service lines, lines related to deleted Invoice/Quote/... are excluded.
+            - Replaced PDFLaTeX with latexmk and LuaTeX as the LaTex compiler for billing templates. This change requires
+              the additional Ubuntu package 'latexmk' to be installed.
         * Opportunities :
             - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                 - A button has been added (not enabled in default installations).
